# agent-dpd

./: .gitignore  AGENTS.ja.md  AGENTS.md  CHANGELOG.md  CLAUDE.ja.md  CLAUDE.md  LICENSE  Makefile  README.ja.md  README.md  SPIKE.md  core  install.sh  marketplace.json  spike_roots.py
.github/workflows/: hook-tests.yml
core/server/: README.ja.md  README.md  pyproject.toml
core/server/src/dpd_mcp_server/: migrate_v5_to_v6.py  migrate_v6_to_v7.py  schema.sql  server.py  storage.py  tools.py
core/server/tests/: conftest.py  test_find_similar.py  test_install_skills.py  test_migrate_v5_to_v6.py  test_migrate_v6_to_v7.py  test_migrate_v7_to_v8.py  test_notes.py  test_reindex_hooks.py  test_server_e2e.py  test_server_unit.py  test_storage.py  test_tools.py
core/skills/: README.ja.md  README.md
core/skills/dpd/: SKILL.md
core/skills/dpd-dump/: SKILL.md
core/skills/dpd-feedback/: SKILL.md
core/skills/dpd-fill/: SKILL.md
core/skills/dpd-find-similar/: SKILL.md
core/skills/dpd-import/: SKILL.md
core/skills/dpd-summary-md/: SKILL.md
core/skills/dpd-verify-edge/: SKILL.md
docs/: README.ja.md  README.md  concept.ja.md  concept.md  examples.md  v0.3-to-v0.3.1-migration.md
mcp/: README.ja.md  README.md  pyproject.toml
mcp/src/dpd_mcp_server/: migrate_v4_to_v5.py  schema.sql  server.py  storage.py  tools.py
mcp/tests/: test_find_similar.py  test_install_skills.py  test_migrate_v4_to_v5.py  test_reindex_hooks.py  test_server_unit.py  test_storage.py  test_tools.py
packaging/claude-code/: .mcp.json
packaging/claude-code/.claude-plugin/: plugin.json
packaging/claude-code/core/server/: pyproject.toml
packaging/claude-code/core/server/src/dpd_mcp_server/: __main__.py  ids.py  migrate.py  migrate_v2_to_v3.py  migrate_v4_to_v5.py  migrate_v5_to_v6.py  migrate_v6_to_v7.py  migrate_v7_to_v8.py  migrate_v8_to_v9.py  pagination.py  schema.sql  server.py  storage.py  tools.py
packaging/claude-code/core/server/tests/: test_export_sql.py  test_find_similar.py  test_install_skills.py  test_migrate_v3_to_v4.py  test_migrate_v5_to_v6.py  test_migrate_v6_to_v7.py  test_migrate_v7_to_v8.py  test_migrate_v8_to_v9.py  test_node_type_vocab.py  test_pagination.py  test_server_unit.py  test_storage.py  test_tools.py  test_v3_lifecycle_e2e.py  test_version_single_source.py
packaging/claude-code/core/skills/: README.ja.md  README.md
packaging/claude-code/core/skills/dpd/: SKILL.md
packaging/claude-code/hooks/: hooks.json  session-start.sh
packaging/claude-code/skills/: dpd  dpd-dump  dpd-edit  dpd-feedback  dpd-fill  dpd-find-similar  dpd-import  dpd-status  dpd-summary-md  dpd-verify-edge
server/: README.md  pyproject.toml
server/src/dpd_mcp_server/: ids.py  migrate_v2_to_v3.py  migrate_v3_to_v4.py  schema.sql  scope.py  server.py  storage.py  tool_aliases.py  tools.py
server/src/prgp_mcp_server/: __main__.py  ids.py  schema.sql  scope.py  server.py  storage.py  tools.py
server/tests/: conftest.py  test_ids.py  test_migrate_v2_to_v3.py  test_migrate_v3_to_v4.py  test_scope.py  test_server_e2e.py  test_server_unit.py  test_storage.py  test_tools.py
skill/: README.ja.md  README.md  SKILL.md
skill/dpd-dump/: SKILL.md
skill/dpd-edit/: SKILL.md
skill/dpd-fill/: SKILL.md
skill/dpd-find-similar/: SKILL.md
skill/dpd-import/: SKILL.md
skill/dpd-status/: SKILL.md
(+10 files in other folders)
