[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prgp-mcp-server"
version = "0.1.0.dev0"
description = "PRGP MCP server: graph state + sqlite storage over stdio."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
prgp-mcp-server = "prgp_mcp_server.server:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/prgp_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
