[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpd-mcp-server"
version = "0.10.0"
description = "DPD MCP server: graph state + sqlite storage over stdio."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.1",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
]

[project.scripts]
dpd-mcp-server = "dpd_mcp_server.server:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dpd_mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"src/dpd_mcp_server/schema.sql" = "dpd_mcp_server/schema.sql"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
